--- a/FonSpa/Models/Models.csproj
+++ b/FonSpa/Models/Models.csproj
@@ -68,9 +68,11 @@
     <Compile Include="Entity\Slide.cs" />
     <Compile Include="IRepository\IAccountAdminRepository.cs" />
     <Compile Include="IRepository\IProductAdminRepository.cs" />
+    <Compile Include="IRepository\IServiceAdminRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AccountAdminRepository.cs" />
     <Compile Include="Repository\ProductAdminRepository.cs" />
+    <Compile Include="Repository\ServiceAdminRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
