--- a/FonSpa/FonSpa/Web.config
+++ b/FonSpa/FonSpa/Web.config
@@ -73,7 +73,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="FonSpaDbContext" connectionString="data source=.\SQLEXPRESS;initial catalog=FonSpa;integrated security=True;MultipleActiveResultSets=True;Application Name=EntityFramework;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="FonSpaDbContext" connectionString="data source=.\SQL2019;initial catalog=FonSpa;integrated security=True;MultipleActiveResultSets=True;Application Name=EntityFramework;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
