--- a/FonSpa/FonSpa/FonSpa.csproj
+++ b/FonSpa/FonSpa/FonSpa.csproj
@@ -249,6 +249,7 @@
     <Compile Include="Areas\Admin\Controllers\LoginAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\MenuAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductAdminController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ProductCategoryController.cs" />
     <Compile Include="Areas\Admin\Controllers\ServicesAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\SlideAdminController.cs" />
     <Compile Include="Areas\Admin\Models\LoginModel.cs" />
@@ -263,26 +264,40 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IServices\IAboutAdminServices.cs" />
     <Compile Include="Services\IServices\IAccountAdminServices.cs" />
     <Compile Include="Services\IServices\IContactAdminServices.cs" />
     <Compile Include="Services\IServices\IContactClientServices.cs" />
+    <Compile Include="Services\IServices\IContentCategoryAdminServices.cs" />
     <Compile Include="Services\IServices\IContentServices.cs" />
     <Compile Include="Services\IServices\ICustomerAdminServices.cs" />
     <Compile Include="Services\IServices\IFooterAdminServices.cs" />
+    <Compile Include="Services\IServices\IFooterCategoryAdminServices.cs" />
     <Compile Include="Services\IServices\IMenuAdminServices.cs" />
+    <Compile Include="Services\IServices\IMenuTypeSerivces.cs" />
     <Compile Include="Services\IServices\IProductAdminSerivces.cs" />
+    <Compile Include="Services\IServices\IProductCategoryAdminServices.cs" />
+    <Compile Include="Services\IServices\IServiceCategoryAdminServices.cs" />
     <Compile Include="Services\IServices\IServicesAdminServices.cs" />
     <Compile Include="Services\IServices\ISlideAdminServices.cs" />
+    <Compile Include="Services\IServices\IStaffAdminServices.cs" />
+    <Compile Include="Services\Services\AboutAdminServices.cs" />
     <Compile Include="Services\Services\AccountAdminServices.cs" />
     <Compile Include="Services\Services\ContactAdminServices.cs" />
     <Compile Include="Services\Services\ContactClientServices.cs" />
+    <Compile Include="Services\Services\ContentCategoryAdminServices.cs" />
     <Compile Include="Services\Services\ContentServices.cs" />
     <Compile Include="Services\Services\CustomerAdminServices.cs" />
     <Compile Include="Services\Services\FooterAdminServices.cs" />
+    <Compile Include="Services\Services\FooterCategoryAdminServices.cs" />
     <Compile Include="Services\Services\MenuAdminServices.cs" />
+    <Compile Include="Services\Services\MenuTypeAdminServices.cs" />
     <Compile Include="Services\Services\ProductAdminSerivces.cs" />
+    <Compile Include="Services\Services\ProductCategoryAdminService.cs" />
+    <Compile Include="Services\Services\ServiceCategoryAdminServices.cs" />
     <Compile Include="Services\Services\ServicesAdminServices.cs" />
     <Compile Include="Services\Services\SlideAdminServices.cs" />
+    <Compile Include="Services\Services\StaffAdminServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Asset\Admin\Controller\AccountController.js" />
@@ -2637,6 +2652,7 @@
     <Folder Include="Areas\Admin\Views\FooterTypeAdmin\" />
     <Folder Include="Areas\Admin\Views\MenuTypeAdmin\" />
     <Folder Include="Areas\Admin\Views\ProductCategoryAdmin\" />
+    <Folder Include="Areas\Admin\Views\ProductCategory\" />
     <Folder Include="Areas\Admin\Views\ServicesCategoryAdmin\" />
     <Folder Include="Asset\Admin\js\Plugin\ckfinder\App_Data\" />
     <Folder Include="Data1\" />
