--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,16 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+
+*.dll
+*.pdb
+*.cache
+*.txt
+FonSpa.csproj
+.vs\FonSpa\v15
+*.ide
+*.ide-shm
+*.ide-wal
+.suo
+obj\Debug
