--- a/.gitignore
+++ b/.gitignore
@@ -423,6 +423,8 @@ project.lock.json
 *.feature.cs
 *.feature.xlsx.*
 *.Specs_*.html
+*.suo
+
 
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
