--- a/FonSpa/FonSpa/FonSpa.csproj
+++ b/FonSpa/FonSpa/FonSpa.csproj
@@ -277,6 +277,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ClientServices\AboutServices.cs" />
     <Compile Include="Services\ClientServices\BlogServices.cs" />
     <Compile Include="Services\ClientServices\BookingServices.cs" />
     <Compile Include="Services\ClientServices\HomeServices.cs" />
@@ -324,6 +325,7 @@
     <Compile Include="Services\AdminServices\ServicesAdminServices.cs" />
     <Compile Include="Services\AdminServices\SlideAdminServices.cs" />
     <Compile Include="Services\AdminServices\StaffAdminServices.cs" />
+    <Compile Include="Services\IClientServices\IAboutServices.cs" />
     <Compile Include="Services\IClientServices\IBlogServices.cs" />
     <Compile Include="Services\IClientServices\IBookingServices.cs" />
     <Compile Include="Services\IClientServices\IHomeServices.cs" />
