--- a/FonSpa/FonSpa/FonSpa.csproj
+++ b/FonSpa/FonSpa/FonSpa.csproj
@@ -16,7 +16,7 @@
     <AssemblyName>FonSpa</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -2794,7 +2794,9 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>55981</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:55981/</IISUrl>
+          <IISUrl>http://fonspa</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://fonspa/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
